tests/ui/specialization/dont-drop-upcast-candidate.stderr
error[E0119]: conflicting implementations of trait `Bar` for type `()`
  --> $DIR/dont-drop-upcast-candidate.rs:10:1
   |
LL | impl<T> Bar for T where dyn Foo: Unsize<dyn Bar> {}
   | ------------------------------------------------ first implementation here
LL | impl Bar for () {}
   | ^^^^^^^^^^^^^^^ conflicting implementation for `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
